# powerboard

./: .gitignore  README.md  pyproject.toml
helpers/create_model_yml_sidecars/: run.py
media/: PowerBoard Monodraw Project.monopic
opennem_extract/: power.py
powerboard/: adhoc.py  client.py  extract.py  loader.py  powerboard.py  sf_amber_loader.py  snowflake_opennem_loader.py  utils.py
powerboard_dbt/: dbt_project.yml  packages.yml  profiles.yml
powerboard_dbt/analyses/: lifetime_avg_price.sql
powerboard_dbt/models/: exposures.yml  source.yml
powerboard_dbt/models/other/: rpt__fy22_usage.sql
powerboard_dbt/models/staging/main/: stg_main__credits.sql  stg_main__credits.yml  stg_main__credits_fees.sql  stg_main__credits_fees_unioned.sql  stg_main__credits_fees_unioned.yml  stg_main__opennem_temperature.sql  stg_main__opennem_temperature.yml  stg_main__sites.sql  stg_main__sites.yml  stg_main__subscription_fees.sql  stg_main__subscription_fees.yml  stg_main__usage_adjusted.sql  stg_main__vdo.sql  stg_main__vdo.yml
powerboard_dbt/models/staging/main/base/: base_main__credits.sql  base_main__credits.yml  base_main__sites.sql  base_main__sites.yml  base_main__subscription_fees.sql  base_main__subscription_fees.yml  base_main__usage.sql  base_main__usage.yml  base_main__vdo.sql  base_main__vdo.yml
powerboard_dbt/models/util/: util__usage_periods.sql
